GNOME Bugzilla – Bug 760635
Fix srcdir != builddir builds after symbol visibility adjustments
Last modified: 2016-01-14 18:44:05 UTC
Commit b77cec8080cdb14541cf106a5afe5bb89718f0b7 broke srcdir != builddir builds. As a result Continuous is affected: http://build.gnome.org/continuous/buildmaster/builds/2016/01/14/38/build/log-vte.txt
Created attachment 319034 [details] [review] build: Fix srcdir != builddir
I thought I fixed this already in commit efa582559b1d58e6d93cce0a2032962fdd58c9a5 ?
Doesn't look like. This is what I did: $ git pull --rebase origin master $ git clean -fdx $ mkdir foo $ cd foo $ ../autogen.sh --prefix=/opt --without-pcre2 --disable-vala --disable-Werror && make V=1 ... g++ -DHAVE_CONFIG_H -I. -I../../src -I.. -DINTERPRET_MAIN -DVTE_API_VERSION=\"2.91\" -I../../src -I. -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include -pthread -I/usr/include/gtk-3.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/at-spi-2.0 -I/usr/include/dbus-1.0 -I/usr/lib64/dbus-1.0/include -I/usr/include/gtk-3.0 -I/usr/include/gio-unix-2.0/ -I/usr/include/cairo -I/usr/include/pango-1.0 -I/usr/include/harfbuzz -I/usr/include/pango-1.0 -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng16 -I/usr/include/freetype2 -I/usr/include/libdrm -I/usr/include/libpng16 -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/libpng16 -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include -g -O2 -std=gnu++11 -pipe -Wall -Wcast-align -Wendif-labels -Werror=declaration-after-statement -Werror=format=2 -Werror=format-nonliteral -Werror=format-security -Werror=implicit-function-declaration -Werror=init-self -Werror=missing-include-dirs -Werror=missing-prototypes -Werror=pointer-arith -Wextra -Wfloat-equal -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wmissing-format-attribute -Wmissing-noreturn -Wno-missing-field-initializers -Wno-switch-enum -Wno-unused-parameter -Wno-packed -Wshadow -Wsign-compare -Wstrict-aliasing=2 -Wundef -Wuninitialized -Wunsafe-loop-optimizations -Wwrite-strings -fno-common -fdiagnostics-show-option -fno-strict-aliasing -fstack-protector -fstack-protector-strong -fno-semantic-interposition -Wno-deprecated-declarations -fno-rtti -fno-exceptions -fvisibility=hidden -fvisibility-inlines-hidden -g -O2 -MT interpret-caps.o -MD -MP -MF .deps/interpret-caps.Tpo -c -o interpret-caps.o `test -f 'caps.cc' || echo '../../src/'`caps.cc In file included from ../../src/vteapp.c:34:0: ../../src/vte/vte.h:31:29: fatal error: vtetypebuiltins.h: No such file or directory ...
Please revert the gnome-continuous tag when this is fixed: https://git.gnome.org/browse/gnome-continuous/commit/?id=d302140c74b0f46b48e5a6c6deba1f73cf3e89ea
Try now with commit 6738de398f59d8e2f074ebaa2f2d05ac953730bb ?
Decided to revert my attempted fixes and apply the patch supplied here. Thanks!