build: Fix srcdir != builddir

Fall out from b77cec8080cdb14541cf106a5afe5bb89718f0b7

https://bugzilla.gnome.org/show_bug.cgi?id=760635